--- a/index.html
+++ b/index.html
@@ -28,5 +28,23 @@
         </div>
     </header>
     <!-- header section ends here     -->
+    <!-- .banner section starts here  -->
+    <div class="banner-container">
+        <div class="banner-items"> 
+            <div class="banner-texts">
+                <p class="banner-semi-title">PLAY LIKE THE</p>
+                <h1 class="banner-main-title">G.O.A.T.</h1>
+                <p> <i class="fa-solid fa-play"></i> 1-Click instant play</p>
+                <p class="no-download"><i class="fa-solid fa-download"></i> No Download</p>
+                <p> <i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <button class="btn pink">Sign In</button>
+                <button class="btn blue">Go Rogue</button>
+            </div>
+        </div>
+        <div class="banner-img"> 
+            <img  class="fluid-img" src="./images/Group 18.png" alt="">
+        </div>
+    </div>
+    <!-- .banner section ends here  -->
 </body>
 </html>
