games items section added

--- a/index.html
+++ b/index.html
@@ -46,5 +46,25 @@
         </div>
     </div>
     <!-- .banner section ends here  -->
+    <!-- online games and funny videos section starts here  -->
+    <div class="games-container">
+        <h2 class="games-title">Online Games <span class="text-games">Funny Videos</span></h2>
+        <p class="semi-text">A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="game-items">
+            <div><img src="./images/Rectangle 4.png" alt="">
+            <p class="semi-text">No Download. No Installs. Play games Instantly on Gamer.</p></div>
+            <div><img src="./images/Rectangle 5.png" alt="">
+            <p class="semi-text">Did you score? #unblockedgames #school</p></div>
+            <div><img src="./images/Rectangle 6.png" alt="">
+            <p class="semi-text">Breaking game records like OG</p></div>
+            <div><img src="./images/Rectangle 7.png" alt="">
+            <p class="semi-text">Busted gaming on school laptop, but you are still lit.</p></div>
+        </div>
+
+    </div>
+
+
+
+    <!-- online games and funny videos section ends here  -->
 </body>
 </html>
