new section added

--- a/index.html
+++ b/index.html
@@ -62,9 +62,23 @@
         </div>
 
     </div>
-
-
-
     <!-- online games and funny videos section ends here  -->
+    <!-- play instantly section starts here  -->
+    <div class="play-container">
+        <div>
+            <h1>
+                <span style="color: #FF42A5;">Play Instantly,</span> <br>No Downloads 
+                <br>No Installs.
+            </h1>
+            <p class="semi-text">Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+        </div>
+        <div class="play-img">
+            <img class="fluid-img boy-img" src="./images/Rectangle 55.png" alt="">
+            <img class="angela-img" src="./images/Rectangle 66.png" alt="">
+        </div>
+    </div>
+
+
+    <!-- play instantly section ends here  -->
 </body>
 </html>
