arcade section added

--- a/index.html
+++ b/index.html
@@ -77,8 +77,50 @@
             <img class="angela-img" src="./images/Rectangle 66.png" alt="">
         </div>
     </div>
-
-
     <!-- play instantly section ends here  -->
+    <!-- arcade section starts here  -->
+    <div class="arcade-container">
+        <div class="box">
+            <img src="./images/Rectangle 11.png" alt="">
+            <p class="arcade-names">Action Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 12.png" alt="">
+            <p class="arcade-names">Adventure Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 13.png" alt="">
+            <p class="arcade-names">Arcade Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 14.png" alt="">
+            <p class="arcade-names" >Educational Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 15.png" alt="">
+            <p class="arcade-names">Word Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 16.png" alt="">
+            <p class="arcade-names">Role Palying Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 17.png" alt="">
+            <p class="arcade-names">Music & Audio Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 18.png" alt="">
+            <p class="arcade-names">Puzzle Games</p>
+        </div>
+        <div class="box">
+            <img src="./images/Rectangle 19.png" alt="">
+            <p class="arcade-names">Strategy Games</p>
+        </div>
+    </div>
+
+
+
+
+    <!-- arcade section ends here  -->
 </body>
 </html>
