responsive footer section added

--- a/index.html
+++ b/index.html
@@ -117,10 +117,38 @@
             <p class="arcade-names">Strategy Games</p>
         </div>
     </div>
-
-
-
-
     <!-- arcade section ends here  -->
+    <!-- footer section starts here  -->
+    <div class="footer-container">
+        <footer class="footer-logo">
+            <img src="./images/Frame.png" alt="">
+            <h1 class="footer-title"><span style="color: #FF42A5;">G</span>amer</h1>
+        </footer>
+        <div class="footer-items">
+            <p>Our Story</p>
+            <p>Games</p>
+            <p>Web Games</p>
+            <p>Careers</p>
+            <p>My Account</p>
+        </div>
+        <div class="footer-icons">
+            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-apple"></i></a>
+        </div>
+        <div class="terms-container">
+            <p>Terms and Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p>
+            <p>Privacy Settings</p>
+        </div>
+        <div class="credit-container">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </div>
+    <!-- footer section ends here  -->
 </body>
 </html>
