--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <title>Gamer</title>
+
 </head>
 <body>
     <!-- header section starts here  -->
@@ -51,16 +53,31 @@
         <h2 class="games-title">Online Games <span class="text-games">Funny Videos</span></h2>
         <p class="semi-text">A Collection of Hilarious Videos to Brighten Your Day</p>
         <div class="game-items">
-            <div><img src="./images/Rectangle 4.png" alt="">
-            <p class="semi-text">No Download. No Installs. Play games Instantly on Gamer.</p></div>
-            <div><img src="./images/Rectangle 5.png" alt="">
-            <p class="semi-text">Did you score? #unblockedgames #school</p></div>
-            <div><img src="./images/Rectangle 6.png" alt="">
-            <p class="semi-text">Breaking game records like OG</p></div>
-            <div><img src="./images/Rectangle 7.png" alt="">
-            <p class="semi-text">Busted gaming on school laptop, but you are still lit.</p></div>
+            <div class="game-item">
+                <img src="./images/Rectangle 4.png" alt="">
+                <div class="overlay">
+                    <a href="#" class="play-button"><i class="fas fa-play"></i>Play Now</a>
+                </div>
+            </div>
+            <div class="game-item">
+                <img src="./images/Rectangle 5.png" alt="">
+                <div class="overlay">
+                    <a href="#" class="play-button"><i class="fas fa-play"></i>Play Now</a>
+                </div>
+            </div>
+            <div class="game-item">
+                <img src="./images/Rectangle 6.png" alt="">
+                <div class="overlay">
+                    <a href="#" class="play-button"> <i class="fas fa-play"></i>Play Now</a>
+                </div>
+            </div>
+            <div class="game-item">
+                <img src="./images/Rectangle 7.png" alt="">
+                <div class="overlay">
+                    <a href="#" class="play-button"><i class="fas fa-play"></i>Play Now</a>
+                </div>
+            </div>
         </div>
-
     </div>
     <!-- online games and funny videos section ends here  -->
     <!-- play instantly section starts here  -->
